--- a/misa-amis-shift-fe/package.json
+++ b/misa-amis-shift-fe/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "element-plus": "^2.11.9",
+    "lodash": "^4.17.21",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
